# Project-AXIOM

./: .gitignore  README.md
.github/workflows/: desktop.yml
AXIOM/: Cargo.toml
AXIOM/crates/axiom-core/: Cargo.toml
AXIOM/crates/axiom-core/src/: bookmarks.rs  browser.rs  config.rs  error.rs  lib.rs
AXIOM/crates/axiom-download/: Cargo.toml
AXIOM/crates/axiom-download/src/: download.rs  error.rs  lib.rs  manager.rs
AXIOM/crates/axiom-navigation/: Cargo.toml
AXIOM/crates/axiom-navigation/src/: command.rs  error.rs  history.rs  input.rs  lib.rs
AXIOM/crates/axiom-privacy/: Cargo.toml
AXIOM/crates/axiom-privacy/src/: lib.rs  permissions.rs  tracking.rs
AXIOM/crates/axiom-session/: Cargo.toml
AXIOM/crates/axiom-session/src/: error.rs  lib.rs  manager.rs  session.rs
AXIOM/crates/axiom-storage/: Cargo.toml
AXIOM/crates/axiom-storage/src/: database.rs  error.rs  lib.rs  migrations.rs
AXIOM/crates/axiom-tabs/: Cargo.toml
AXIOM/crates/axiom-tabs/src/: error.rs  lib.rs  manager.rs  state.rs  tab.rs
AXIOM/src/: index.html  main.js  styles.css
AXIOM/src-tauri/: Cargo.toml  tauri.conf.json
AXIOM/src-tauri/capabilities/: default.json
AXIOM/src-tauri/src/: lib.rs  state.rs
AXIOM/src-tauri/src/commands/: diagnostics.rs  downloads.rs  mod.rs  navigation.rs  privacy.rs  reader.rs  sessions.rs  settings.rs  tabs.rs  webview.rs  windows.rs
