[package]
name = "axiom-download"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "AXIOM Browser - Native download manager"

[dependencies]
axiom-storage = { path = "../axiom-storage" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
parking_lot = { workspace = true }
rusqlite = { workspace = true }
