[package]
name = "axiom-navigation"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "AXIOM Browser - Navigation and address bar with command support"

[dependencies]
axiom-storage = { path = "../axiom-storage" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
