[package]
name = "axiom-privacy"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "AXIOM Browser - Privacy and tracking protection"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
