[package]
name = "axiom-session"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "AXIOM Browser - Session management and persistence"

[dependencies]
axiom-storage = { path = "../axiom-storage" }
axiom-tabs = { path = "../axiom-tabs" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
rusqlite = { workspace = true }
