[package]
name = "axiom-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "AXIOM Browser - SQLite storage layer"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
