[package]
name = "axiom-tabs"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "AXIOM Browser - Tab management with state machine"

[dependencies]
axiom-storage = { path = "../axiom-storage" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
parking_lot = { workspace = true }
rusqlite = { workspace = true }
